Fix nav bar view for mobile, and stop horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 html, body {
     height: 100vh;
     width: 100%;
+    overflow-x: hidden; /* Stops horizontal scroll bar for mobile */
+    max-width: 100%;
 }
 
 body {
@@ -58,4 +60,14 @@ footer {
     width: 100%;
     bottom: 0;
     color: #808080;
+}
+
+@media (max-width: 768px) {
+    .navbar_list {
+        width: 100%;
+    }
+
+    .navbar_page {
+        padding: 0.8rem 0;
+    }
 }
